Container Component patterm applied for Product Edit component - Store operations moved to Product Shell component and Product Edit component remained the Presentational one

--- a/APM-Demo0/src/app/products/product-shell/product-shell.component.html
+++ b/APM-Demo0/src/app/products/product-shell/product-shell.component.html
@@ -11,6 +11,13 @@
     ></pm-product-list>
   </div>
   <div class='col-md-8'>
-    <pm-product-edit></pm-product-edit>
+    <pm-product-edit
+      [product]="selectedProduct$ | async"
+      [errorMessage]="errorMessage$ | async"
+      (clearCurrentProduct)="clearCurrentProduct()"
+      (createNewProduct)="createProduct($event)"
+      (saveExistingProduct)="updateProduct($event)"
+      (deleteExistingProduct)="deleteProduct($event)"
+    ></pm-product-edit>
   </div>
 </div>
